# SwitchBoard

./: .gitignore  README.md  pyproject.toml  run.bat
.github/workflows/: ci.yml
src/switchboard/: __main__.py  app.py  config_manager.py  models.py
src/switchboard/config/: __init__.py  assistants.py  io.py  paths.py  security.py  state.py
tests/: conftest.py  test_config.py
