[project]
name = "switchboard"
version = "0.1.0"
description = "Switchboard — Unified AI Tool Manager for Cursor, VS Code, Claude Code, Cline, OpenCode, Gemini, Codex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
switchboard = "switchboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switchboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["switchboard"]
